internet_gateway.tf
#Creating Internet Gateway

resource "aws_internet_gateway" "terraform_igw" {
    vpc_id = aws_vpc.terraform_vpc.id

    tags = {
      "Name" = "Terraform IGW"
    }
  
}
